--- a/style.css
+++ b/style.css
@@ -232,7 +232,6 @@
     font-size: 45px;
     text-align: center;
     justify-content: center;  
-    
    }
    #p2
    {
@@ -246,4 +245,71 @@
       width: 750px;
       height: 500px;
      margin-left: 300px;
+   }
+   #p4
+   {
+      font-size: 50px;
+      margin-top: 600px;
+      text-align: center;
+   }
+   #p5
+   {
+      border: 1px;
+      border-style: solid;
+      background-color:white;
+      border-color:white;
+   }
+   #pp1
+   {
+      border:1px;
+      border-style: solid;
+      background-color :rgb(222, 237, 247);
+      border-color :rgb(222, 237, 247) ;
+      width: 400px;
+      min-height: 250px;
+      margin-left: 100px;
+      margin-right: 170px;
+      overflow: auto;
+      float: right;
+      margin-top: 100px;
+   }
+   #pp2
+   {
+      border: 1px;
+      border-style: solid;
+      background-color:rgb(222, 237, 247);
+      border-color:rgb(222, 237, 247);
+      margin-left: 100px;
+      margin-right: 150px;
+      width: 400px;
+      min-height: 250px;
+      float: left;
+      overflow: auto;
+      margin-top: 100px;  
+   }
+   #o1
+   {
+      text-align: center;
+   }
+   #o2
+   {
+      font-size: 17px;
+      margin-left: 30px;
+   }
+   #o3
+   {
+     margin-left: 30px;
+   }
+   #e1
+   {
+      text-align: center;
+   }
+   #e2
+   {
+      font-size:17px;
+      margin-left: 30px;
+   }
+   #e3
+   {
+      margin-left:30px ;
    }
