--- a/style.css
+++ b/style.css
@@ -313,32 +313,17 @@
    {
       margin-left:30px ;
    }
-   #tit
-   {
-      font-size: 30px;
-      margin-top: 25px;
-      color: black ;
-      
-   }
-   #txt
-   {
-      font-size: 15px;
-   }
-   #imgg
-   {
-      width: 600px;
-      height:500px;
-   }
-   #ressources
-   {
-      font-size: 15px;
-      margin-right: 100px;}
-
-      #hadhemi  
- {
-        
+  #footer
+  {
+   width: 1340px;
+   height: 300px;
    background-color: black;
-         color: white;
-         /* height: 500px;
-         width: 1500px */
-   }
+   margin-top: 500px;
+  }
+  #peboo
+  {
+   height: 250px;
+   width: 250px;
+  }
+   
+  
