--- a/style.css
+++ b/style.css
@@ -320,10 +320,90 @@
    background-color: black;
    margin-top: 500px;
   }
-  #peboo
+  #case1
   {
-   height: 250px;
+   border: 1px;
+   border-style: solid;
+   background-color: black;
+   border-color:black;
+   margin-left: 30px;
+   margin-right: 100px;
+   width: 250px;
+   min-height: 250px;
+   float: left;
+   overflow: auto;
+   margin-top: 30px;
+  }
+  #case2
+  {
+   border: 1px;
+   border-style: solid;
+   background-color:black;
+   border-color:black;
+   margin-left: -30px;
+   width: 250px;
+   min-height: 250px;
+   float: left;
+   overflow: auto;
+   margin-top: 30px;
+  }
+  #case3
+  {
+   border: 1px;
+   border-style: solid;
+   background-color:black;
+   border-color: black;
+   margin-left: 70px;
+   width: 250px;
+   min-height: 250px;
+   float: left;
+   overflow: auto;
+   margin-top: 30px;
+  }
+  #case4
+  {
+   border: 1px;
+   border-style: solid;
+   background-color: black;
+   border-color:black;
+   margin-left: 70px;
+   width: 250px;
+   min-height: 250px;
+   float: left;
+   overflow: auto;
+   margin-top: 30px;
+  }
+  h3
+  {
+   text-align: center;
+   font-size: 20px;
+   color: white;
+  }
+  .s1
+  {
+   margin-left: 10px;
+   color:white;
+  }
+  #case1 img
+  {
+   height: 50px;
    width: 250px;
   }
+  .s2
+  {
+   margin-left: 100px;
+   color:white;
+  }
+  .s3
+  {
+   margin-left: 80px;
+   color:white;
+  }
+  .s4
+  {
+   margin-left: 80px;
+   color:white;
+  }
+  
    
   
